<resources>
    <string name="app_name">Gestion Hospitalier</string>
    <string name="connection">Connexion</string>
    <string name="login">Identifiant</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="temperature">Température</string>
    <string name="hospital">Hopital</string>
    <string name="success">Inscription sucess</string>
    <string name="pressure">Tension</string>
    <string name="record">Enregistré</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="help">Aide</string>
    <string name="first_name">Prenom</string>
    <string name="last_name">Nom</string>
    <string name="age">Age</string>
    <string name="disease">Maladie</string>
    <string name="symptom">Symptome</string>
    <string name="weight">Poids</string>
    <string name="address">Adress</string>
    <string name="date">Date</string>
    <string name="hour">Heure</string>
    <string name="doctors_name">Nom du medcin</string>
    <string name="welcome">Bienvenue</string>
    <string name="error_fields">Champs obligatoire</string>
    <string name="error_connection">Erreur de connection</string>
    <string name="error_parameters">Paramètres incorrects</string>
    <string name="wait">Veuiller attendre</string>
    <string name="presentation">Présentation du système</string>
    <string name="consultation">Consultation</string>
    <string name="appointment">Render-vous</string>
    <string name="view_consultations">Afficher les consultation</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_consultation">ConsultationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_appointement">AppointementActivity</string>
    <string name="title_activity_hospital">Map</string>
</resources>