<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:textSize="@dimen/dim_title"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:id="@+id/txtLastName"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:id="@+id/txtDate"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:id="@+id/txtHour"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:id="@+id/txtDoctorsName"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/doctors_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:id="@+id/txtLogin"
        android:hint="@string/login"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <Button
        android:id="@+id/btnAppointement"
        android:layout_margin="@dimen/dim_top"
        android:layout_marginTop="@dimen/dim_top"
        android:text="@string/record"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Button>

</LinearLayout>