<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientActivity">

    <TextView
        android:layout_marginTop="@dimen/dim_top"
        android:textStyle="bold"
        android:textSize="@dimen/dim_title"
        android:gravity="center"
        android:text="@string/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>


    <EditText
        android:id="@+id/txtLogin"
        android:hint="@string/login"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/txtPassword"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <Button
        android:layout_margin="@dimen/dim_all"
        android:id="@+id/btnConnect"
        android:layout_marginTop="@dimen/dim_top"
        android:background="@color/colorAccent"
        android:text="@string/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

</LinearLayout>